added FoodPreferencesDto and chenged service methods to use it